--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,8 @@ figure.yp-figure .glyphicon {
     box-shadow: 0 0.15rem 0.15rem 0 rgba(0,0,0,.15), 0 0.2rem 0.1rem -0.15rem rgba(0,0,0,.2), 0 0.1rem 0.5rem 0 rgba(0,0,0,.15);
 }
 .yp-figure.selected {
-	/* -webkit-filter: blur(0);
-	        filter: blur(0); */
+	-webkit-filter: blur(0);
+	        filter: blur(0);
 	-webkit-transform: scale(1.25, 1.15);
 	    -ms-transform: scale(1.25, 1.15);
 	        transform: scale(1.25, 1.15);
@@ -67,7 +67,11 @@ figure.yp-figure .glyphicon {
     box-shadow: 0 0.15rem 0.15rem 0 rgba(0,0,0,.15), 0 0.2rem 0.1rem -0.15rem rgba(0,0,0,.2), 0 0.1rem 0.5rem 0 rgba(0,0,0,.15);
 }
 .yp-figure {
-	/* -webkit-filter: blur(1.75px);
-	        filter: blur(1.75px); */
+	-webkit-filter: blur(1.75px);
+	        filter: blur(1.75px);
 	z-index: 1;
+}
+.yp-figure:hover {
+	-webkit-filter: blur(0);
+	        filter: blur(0);
 }
