--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,9 @@
-@media screen and (min-width: 992px) {
-	.col-width.col-md-2 {
-		width: 20%;
-	}
-}
-@media screen and (max-width: 576px) {
-	.col-width.col-xs-6 {
-		width: 100%;
-	}
-}
 figure.yp-figure {
 	position: relative;
 	margin-bottom: 25px;
 	margin-right: auto;
 	margin-left: auto;
+	z-index: 1;
 }
 figcaption.yp-figcaption {
 	position: absolute;
@@ -43,20 +34,37 @@ figcaption.yp-figcaption button {
 	width: 110px;
 }
 figure.yp-figure .glyphicon {
-	color: green;
-    background-color: #fff;
+	font-size: 50px;
+	color: #fff;
+    /* background-color: #fff;
     padding: 8px;
     position: absolute;
     top: 4px;
     left: 4px;
-    font-size: 17px;
-    border-radius: 50% 
+    border-radius: 50% */
 }
-.yp-figure.shadow {
-    -webkit-box-shadow: 0 0.15rem 0.15rem 0 rgba(0,0,0,.15), 0 0.2rem 0.1rem -0.15rem rgba(0,0,0,.2), 0 0.1rem 0.5rem 0 rgba(0,0,0,.15);
-    box-shadow: 0 0.15rem 0.15rem 0 rgba(0,0,0,.15), 0 0.2rem 0.1rem -0.15rem rgba(0,0,0,.2), 0 0.1rem 0.5rem 0 rgba(0,0,0,.15);
+figure.yp-figure .selected-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.75);
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	display: none;
+	z-index: 5
 }
-.yp-figure.selected {
+.yp-figure.selected .selected-overlay {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+}
+/* .yp-figure.selected {
 	-webkit-filter: blur(0);
 	        filter: blur(0);
 	-webkit-transform: scale(1.25, 1.15);
@@ -74,4 +82,39 @@ figure.yp-figure .glyphicon {
 .yp-figure:hover {
 	-webkit-filter: blur(0);
 	        filter: blur(0);
+} */
+@media screen and (min-width: 1500px) {
+   .skins-basic .col-width.col-md-2  {
+      width: 20% !important;
+   }
+}
+@media screen and (max-width: 1500px) and (min-width: 1350px) {
+   .skins-basic .col-width.col-md-2 {
+      width: 25% !important;
+   }
+}
+@media screen and (max-width: 1350px) and (min-width: 1200px) {
+   .skins-basic .col-width.col-md-2 {
+      width: 33.33% !important;
+   }
+}
+@media screen and (max-width: 1200px) and (min-width: 992px) {
+   .skins-basic .col-width.col-md-2 {
+      width: 50% !important;
+   }
+}
+@media screen and (max-width: 992px) and (min-width: 850px) {
+	.skins-basic .col-width.col-md-2 {
+		width: 100% !important;
+	}
+}
+@media screen and (max-width: 850px) and (min-width: 768px) {
+	.skins-basic .col-width.col-md-2 {
+      width: 50% !important;
+   }
+}
+@media screen and (max-width: 576px) {
+	.col-width.col-xs-6 {
+		width: 100%;
+	}
 }
